--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+project/**/*
+target/**
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
